[package]
name = "privnote_server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "api", "entity", "migration", "service"]


[dependencies]
api = { path = "api" }


# [profile.release]
# panic = "abort"
# codegen-units = 1
# lto = true
# opt-level = "s"
# strip = true
