[package]
name = "api"
version = "1.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
service = { path = "../service" }
entity = { path = "../entity" }
migration = { path = "../migration" }

axum = "0.6.18"
hyper = "0.14"

tokio = { version = "1.29.1", features = ["full"] }
tokio-cron-scheduler = "*"

serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.100"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15.7"
anyhow = "1.0.71"

rust-argon2 = "1.0.0"
rand = "0.8.5"
moka = { version = "0.11.2", features = ["future"] }
chrono = "0.4.26"
magic-crypt = "3.1.12"
