[package]
name = "migration"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"


[dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tracing-subscriber = { version = "0.3"}

[dependencies.sea-orm-migration]
version = "^0"
features = [
  # Enable following runtime and db backend features if you want to run migration via CLI
  "runtime-tokio-rustls",
  "sqlx-postgres",
]
