[package]
name = "service"
version = "1.0.0"
edition = "2021"


[dependencies]
entity = { path = "../entity" }
serde = { version = "1.0.170", features = ["derive"] }
serde_json = "1.0.100"

chrono = "0.4.26"
anyhow = "1.0.71"

[dependencies.sea-orm]
version = "0.11.3"
features = ["debug-print", "runtime-tokio-rustls", "sqlx-postgres"]

[dev-dependencies]
tokio = { version = "1.29.1", features = ["macros", "rt"] }

[features]
mock = ["sea-orm/mock"]
